Change NAME to Josh

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="hero">
       <div class="container">
         <nav class="row">
-          <div class="col-md-12"><a href="/" class="logo">NAME</a></div>
+          <div class="col-md-12"><a href="/" class="logo">Josh's Rides</a></div>
         </nav>
         <div class="row">
           <div class="col-md-10">
-            <h1>Drive safely with NAME</h1>
+            <h1>Drive safely with Josh</h1>
             <h2>My price. My schedule. My choice.</h2>
           </div>
         </div>
